--- a/package.json
+++ b/package.json
@@ -2,14 +2,23 @@
   "name": "signature-example",
   "version": "0.0.0",
   "description": "Hello Exponent!",
-  "author": "exponent.team@gmail.com",
+  "author": null,
   "private": true,
   "main": "main.js",
+  "scripts": {
+    "test": "jest --no-cache --verbose"
+  },
   "dependencies": {
     "@exponent/ex-navigation": "^1.6.0",
     "@exponent/vector-icons": "^1.0.4",
     "exponent": "^10.0.4",
     "react": "~15.3.2",
-    "react-native": "github:exponentjs/react-native#sdk-10.1.2"
+    "react-native": "github:exponentjs/react-native#sdk-10.1.2",
+    "react-native-svg": "^4.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^3.10.2",
+    "eslint-config-rmotr": "0.0.5",
+    "eslint-plugin-react": "^6.7.1"
   }
 }
