--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@exponent/ex-navigation": "^1.6.0",
     "@exponent/vector-icons": "^1.0.4",
-    "exponent": "^10.0.4",
+    "exponent": "~12.0.0",
     "react": "~15.3.2",
-    "react-native": "github:exponentjs/react-native#sdk-10.1.2",
+    "react-native": "github:exponentjs/react-native#sdk-12.0.0",
     "react-native-svg": "^4.3.3"
   },
   "devDependencies": {
